Resultados de la P1-L1

--- a/B3/P1-L1.md
+++ b/B3/P1-L1.md
@@ -19,7 +19,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L1.md] (https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L1.md)                                                         |
 | P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P1-L1-resultados.md)  |                                                   
-| Q. P. ANDREA KUNPING | <!--enlace--> https://github.com/akqp2104/practicas-ISE/blob/main/P1-L1-resultados.md |
+| Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P1-L1-resultados.md) |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/Fransmm/practicas-ISE/blob/main/P1-L1-resultados.md)                                                           |
 | V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P1-L1-resultados.md)                                                           |
