--- a/B3/P1-L3.md
+++ b/B3/P1-L3.md
@@ -6,7 +6,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | --------------- | ---------------------------------------------------------- |
 | A. G. JOSE MANUEL | <!--enlace-->                                                           |
 | C. M. JORGE | <!--enlace-->                                                           |
-| C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/img/configuracion_rocky.png(https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L3-resultados.md)                                                           |
+| C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P1-L3-resultados.md) |
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | <!--enlace-->                                                           |
 | I. MEHDI | <!--enlace-->                                                           |
