Agrego enlace a mi bitacora para leccion 3 practcia 1

--- a/B3/P1-L3.md
+++ b/B3/P1-L3.md
@@ -21,7 +21,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P1-L3-resultados.md) |
 | Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P1-L3-resultados.md)                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
-| S. M. M. FRANCISCO | <!--enlace-->                                                           |
+| S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P1-L3-resultado.md](https://github.com/Fransmm/practicas-ISE/blob/main/P1-L3-resultado.md)                                                          |
 | V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P1-L3-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P1-L3-resultados.md)                                                           |
