--- a/D1/P1-L2.md
+++ b/D1/P1-L2.md
@@ -14,7 +14,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | F. R. FRANCISCO | <!--enlace-->                                                           |
 | F. R. OSCAR | <!--enlace-->                                                           |
 | G. G. MARIO | <!--enlace-->                                                           |
-| G. F. JAVIER | [https://github.com/Jesho7/Practicas-ISE/blob/main/P1-L2-resultados.md]https://github.com/Jesho7/Practicas-ISE/blob/main/P1-L2-resultados.md<!--enlace-->                                                           |
+| G. F. JAVIER | https://github.com/Jesho7/Practicas-ISE/blob/main/P1-L2-resultados.md<!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
 | H. M. ANDRES | <!--enlace-->                                                           |
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
