--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -29,4 +29,4 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1_L3-resultados.md |
 | R. V. GERMAN | https://github.com/germanrv14/practicas-ISE/blob/main/P1-L3_resulatado.md |                                                 |
 | V. R. ELENA |[https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L3-resultados.md) |
-| V. G. HUGO | <!--enlace-->                                                           |
+| V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/13f4abc3c07afd0526cdf4a43f69a1878718cfef/P1-L3.md](https://github.com/hugovelez16/practicas-ISE/blob/13f4abc3c07afd0526cdf4a43f69a1878718cfef/P1-L3.md) |
