Agrego enlace a mi bitácora para la lección 1 de la práctica 1

--- a/D1/P1-L1.md
+++ b/D1/P1-L1.md
@@ -5,7 +5,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
 | A. O. PEDRO LUIS | [https://github.com/pabril03/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/pabril03/practicas-ISE/blob/main/P1-L1-resultados.md)                                                           |
-| A. L. ANA MARINA | <!--enlace-->                                                           |
+| A. L. ANA MARINA | [https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L1-resultados.md] (https://github.com/anaguilarl24/practicas-ISE/blob/main/P1-L1-resultados.md)                                                           |
 | A. L. GONZALO | [https://github.com/Gonzalo845/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/Gonzalo845/practicas-ISE/blob/main/P1-L1-resultados.md)                                                           |
 | C. V. DANIEL | [https://github.com/DanielChicoUGR/practicas-ISE/blob/Deploy/P1-L1-resultados.md](https://github.com/DanielChicoUGR/practicas-ISE/blob/Deploy/P1-L1-resultados.md)<!--enlace-->                                                           |
 | C. S. ALEJANDRO |[https://github.com/AlexCoca99/practicasISE/blob/main/P1-L1-resultados.md]                                                          |
