--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -12,7 +12,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L3-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L3-resultados.md) |
 | F. G. CANDELA | <!--enlace-->                                                           |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
-| F. R. OSCAR | <!--enlace-->                                                           |
+| F. R. OSCAR | [https://github.com/oscar0310/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/oscar0310/practicas-ISE/blob/main/P1-L3-resultados.md)                                                          |
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | [https://github.com/AntonioHaro1/practicas-ISE/blob/main/P1-L3-Resultados.md](https://github.com/AntonioHaro1/practicas-ISE/blob/main/P1-L3-Resultados.md)                                                          |
