--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -10,7 +10,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
 | C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L3-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P1-L3-resultados.md) |
-| F. G. CANDELA | <!--enlace-->                                                           |
+| F. G. CANDELA | [https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L3.md] (https://github.com/candelaafdez/practicas-ISE/blob/main/P1-L3.md) |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
 | F. R. OSCAR | <!--enlace-->                                                           |
 | G. G. MARIO | <!--enlace-->                                                           |
