--- a/D1/P1-L3.md
+++ b/D1/P1-L3.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P1_L3-resultados.md |
-| R. V. GERMAN | https://github.com/germanrv14/practicas-ISE/blob/main/P1-L3_resulatado.md |                                                 |
+| R. V. GERMAN | [https://github.com/germanrv20/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/germanrv20/practicas-ISE/blob/main/P1-L3-resultados.md) |                                                 |
 | V. R. ELENA |[https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L3-resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P1-L3-resultados.md) |
 | V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/13f4abc3c07afd0526cdf4a43f69a1878718cfef/P1-L3.md](https://github.com/hugovelez16/practicas-ISE/blob/13f4abc3c07afd0526cdf4a43f69a1878718cfef/P1-L3.md) |
