--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -18,7 +18,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | H. A. ANTONIO | <!--enlace-->                                                           |
 | H. M. ANDRES | <!--enlace-->                                                           |
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
-| L. J. MAURICIO | <!--enlace-->                                                           |
+| L. J. MAURICIO | [https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L1-resultados.md) |
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
 | M. R. ALEJANDRO | <!--enlace-->                                                           |
