--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -26,7 +26,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
-| R. L. ALBERTO | <!--enlace-->                                                           |
+| R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L1-resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/63484625-c729-4671-9225-d0514989559a)
