--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -24,5 +24,5 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
-| V. A. GABRIEL | <!--enlace-->                                                           |
+| V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/25e4220f-500d-4e25-a51c-024d9a45e951)
