Agrego enlace a mi bitácora para la lección 1 de la práctica 2

--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -14,7 +14,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | <!--enlace-->                                                           |
-| N. M. ALEJANDRO | <!--enlace-->                                                           |
+| N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/6e260b808cad656068a4811f2ad88df5518d1c9d/P2-L1-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/6e260b808cad656068a4811f2ad88df5518d1c9d/P2-L1-resultados.md)                                                           |
 | O. C. FRANCESC | <!--enlace-->                                                           |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | <!--enlace-->                                                           |
