--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -13,7 +13,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
-| M. D. JUAN CARLOS | <!--enlace-->                                                           |
+| M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L1.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L1.md)|
 | N. M. ALEJANDRO | <!--enlace-->                                                           |
 | O. C. FRANCESC | <!--enlace-->                                                           |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
