--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -6,7 +6,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | --------------- | ---------------------------------------------------------- |
 | A. G. JOSE MANUEL | <!--enlace-->                                                           |
 | C. M. JORGE | <!--enlace-->                                                           |
-| C. G. VICTOR | <!--enlace-->                                                           |
+| C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L1-resultados.md) |
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | <!--enlace-->                                                           |
 | I. MEHDI | <!--enlace-->                                                           |
