--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -25,4 +25,4 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
-| V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/25e4220f-500d-4e25-a51c-024d9a45e951)
+| V. S. CRISTINA |[https://github.com/26203/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P2-L1-resultados.md)|![image](https://github.com/user-attachments/assets/25e4220f-500d-4e25-a51c-024d9a45e951)
