--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -20,7 +20,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
-| M. M. ANA ISABEL | <!--enlace-->                                                           |
+| M. M. ANA ISABEL | [https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | M. R. ALEJANDRO | <!--enlace-->                                                           |
 | P. P. SEBASTIAN | <!--enlace-->                                                           |
 | R. G. PABLO | <!--enlace-->                                                           |
