--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -29,4 +29,4 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
-| V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/63484625-c729-4671-9225-d0514989559a)
+| V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L1.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L1.md) |![image](https://github.com/user-attachments/assets/63484625-c729-4671-9225-d0514989559a)
