Agrego enlace a mi bitácora para P2-L1

--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -8,7 +8,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | C. M. JORGE | <!--enlace-->                                                           |
 | C. G. VICTOR | <!--enlace-->                                                           |
 | F. P. MARINO | <!--enlace-->                                                           |
-| F. B. MIGUEL | <!--enlace-->                                                           |
+| F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L1-resultados.md)    |
 | I. MEHDI | <!--enlace-->                                                           |
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
