--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -28,5 +28,5 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN | <!--enlace-->                                                           |
-| V. R. ELENA | <!--enlace-->                                                           |
+| V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P2-L1.resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P2-L1.resultados.md)|
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/63484625-c729-4671-9225-d0514989559a)
