--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P2-L1-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P2-L1-resultados.md)
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/63484625-c729-4671-9225-d0514989559a)
