--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -22,7 +22,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
-| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P2-L1-resultados.md)                                                         |
+| V. B. JOSE ANDRES | <!--enlace-->                                                         |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/eea96a11-6416-4e6b-8bbc-72d75d6f3b48)
