--- a/B3/P1-L0.md
+++ b/B3/P1-L0.md
@@ -16,7 +16,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L0-resultados.md] (https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L0-resultados.md)          |                                                          |
 | N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/main/P1-L0-resultados.md) |
 | O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/xescoliver/practicas-ISE/blob/main/P1-L0-resultados.md)                                |
-| O. J. JOSE IGNACIO | <!--enlace-->                                                           |
+| O. J. JOSE IGNACIO | (https://github.com/nachoorjmnz/practicasISE/tree/540648713339b4fd15c22750d8cbbfa53dbd8c87/P1-L1)                                                           |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |
 | P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P1-L0-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P1-L0-resultados.md)                                                           |                                                       |
 | Q. P. ANDREA KUNPING | <!--enlace--> https://github.com/akqp2104/practicas-ISE/blob/main/P1-L0-resultados.md  |
