--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -5,7 +5,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
 | A. G. JOSE MANUEL | <!--enlace-->                                                           |
-| C. M. JORGE | <!--enlace-->                                                           |
+| C. M. JORGE | [https://github.com/canomelero/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/canomelero/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L1-resultados.md) |
 | F. P. MARINO | [https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L1-resultados.md)       |
 | F. B. MIGUEL | <!--enlace-->                                                           |
