--- a/D1/P2-L1.md
+++ b/D1/P2-L1.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L1-resultados.md |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P2-L1-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P2-L1-resultados.md)
 | V. R. ELENA | [https://github.com/elenavallejor/practicas-ISE/blob/main/P2-L1.resultados.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P2-L1.resultados.md)|
 | V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L1.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L1.md) |
