--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -16,7 +16,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | [https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L2-resultados.md](https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L2-resultados.md)                                                           |
-| H. M. ANDRES | <!--enlace-->                                                           |
+| H. M. ANDRES | [https://github.com/AndresHurtado001/practicas-ISE/blob/main/P2-L2%20resultados.md](https://github.com/AndresHurtado001/practicas-ISE/blob/main/P2-L2%20resultados.md)                                                          |
 | J. U. JUAN LUIS | [https://github.com/jiur8/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/jiur8/practicas-ISE/blob/main/P2-L2-resultados.md)                                                       |
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
