agrego enlace de la P2-L2

--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -29,4 +29,4 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
-| V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/cda0f864-eca4-4e17-8c01-cff159a8474a)
+| V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L2.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L2.md)|![image](https://github.com/user-attachments/assets/cda0f864-eca4-4e17-8c01-cff159a8474a)
