--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -7,7 +7,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | A. G. JOSE MANUEL | <!--enlace-->                                                           |
 | C. M. JORGE | <!--enlace-->                                                           |
 | C. G. VICTOR | <!--enlace-->                                                           |
-| F. P. MARINO | <!--enlace-->                                                           |
+| F. P. MARINO | [https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L2-resultados.md)   |
 | F. B. MIGUEL | <!--enlace-->                                                           |
 | I. MEHDI | <!--enlace-->                                                           |
 | J. S. DAVID | <!--enlace-->                                                           |
