Subo mis capturas de la P2-L2 a la bitácora

--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -4,7 +4,7 @@ Modifica sólo la línea que tenga tus iniciales.
 
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
-| A. O. PEDRO LUIS | <!--enlace-->                                                           |
+| A. O. PEDRO LUIS | [https://github.com/pabril03/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/pabril03/practicas-ISE/blob/main/P2-L2-resultados.md)                                                           |
 | A. L. ANA MARINA | <!--enlace-->                                                           |
 | A. L. GONZALO | [https://github.com/Gonzalo845/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/Gonzalo845/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
