--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -21,7 +21,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/Fransmm/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
-| V. B. JOSE ANDRES | <!--enlace-->                                                           |
+| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | V. S. CRISTINA |[https://github.com/26203/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P2-L1-resultados.md)|![image](https://github.com/user-attachments/assets/25e4220f-500d-4e25-a51c-024d9a45e951)
