--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -26,7 +26,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
-| R. L. ALBERTO | <!--enlace-->                                                           |
+| R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L2-resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/cda0f864-eca4-4e17-8c01-cff159a8474a)
