--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -21,7 +21,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | P. G. INÉS | <!--enlace-->                                                           |
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
-| S. M. M. FRANCISCO | <!--enlace-->                                                           |
+| S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/Fransmm/practicas-ISE/blob/main/P2-L2-resultados.md)                                                          |
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
