--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L2-resultados.md |
-| R. V. GERMAN | <!--enlace-->                                                           |
-| V. R. ELENA | <!--enlace-->                                                           |
+| R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P2-L2-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P2-L2-resultados.md)
+| V. R. ELENA ||(
 | V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L2.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L2.md)|![image](https://github.com/user-attachments/assets/cda0f864-eca4-4e17-8c01-cff159a8474a)
