Adjunto mis capturas de la P2-L2.

--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -9,7 +9,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L2-resultados.md) |
 | F. P. MARINO | <!--enlace-->                                                           |
 | F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L2-resultados.md)                                                         |
-| I. MEHDI | <!--enlace-->                                                           |
+| I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L2-resultados.md)   |
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
