--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -23,7 +23,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | M. M. ANA ISABEL | [https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L2-resultados.md)                                                          |
 | M. R. ALEJANDRO | [https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L2-resultados.md)                                                           |
 | P. P. SEBASTIAN | <!--enlace-->                                                           |
-| R. G. PABLO | <!--enlace-->                                                           |
+| R. G. PABLO | https://github.com/pablorg0/practicas-ISE/blob/main/P2-L2-resultados.md  |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L2-resultados.md |
