--- a/D1/P2-L2.md
+++ b/D1/P2-L2.md
@@ -18,7 +18,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | H. A. ANTONIO | [https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L2-resultados.md](https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L2-resultados.md)                                                           |
 | H. M. ANDRES | [https://github.com/AndresHurtado001/practicas-ISE/blob/main/P2-L2%20resultados.md](https://github.com/AndresHurtado001/practicas-ISE/blob/main/P2-L2%20resultados.md)                                                          |
 | J. U. JUAN LUIS | [https://github.com/jiur8/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/jiur8/practicas-ISE/blob/main/P2-L2-resultados.md)                                                       |
-| L. J. MAURICIO | <!--enlace-->                                                           |
+| L. J. MAURICIO | [https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L2-resultados.md)|
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | [https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/anabelmenam/practicas-ISE/blob/main/P2-L2-resultados.md)                                                          |
 | M. R. ALEJANDRO | [https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L2-resultados.md)                                                           |
