--- a/B3/P2-L1.md
+++ b/B3/P2-L1.md
@@ -17,7 +17,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/6e260b808cad656068a4811f2ad88df5518d1c9d/P2-L1-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/6e260b808cad656068a4811f2ad88df5518d1c9d/P2-L1-resultados.md)                                                           || O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/blob/main/P2-L1.md](https://github.com/xescoliver/practicas-ISE/blob/main/P2-L1.md)  |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P2-L1.md](https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P2-L1.md)                                                           |
-| P. G. INÉS | <!--enlace-->                                                           |
+| P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P2-L1-resultados.md)                                                          |
 | Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P2-L1-resultados.md](https://github.com/Fransmm/practicas-ISE/blob/main/P2-L1-resultados.md)                                                           |
