--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -9,7 +9,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | A. L. GONZALO | <!--enlace-->                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
-| C. L. JOAQUÍN | <!--enlace-->                                                           |
+| C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P2-L3-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P2-L3-resultados.md) |
 | F. G. CANDELA | <!--enlace-->                                                           |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
 | F. R. OSCAR | <!--enlace-->                                                           |
