--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -16,7 +16,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. D. JUAN CARLOS |[https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L2.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L2.md)      |
 | N. M. ALEJANDRO | <!--enlace-->                                                           |
 | O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/blob/main/P2-L2.md](https://github.com/xescoliver/practicas-ISE/blob/main/P2-L2.md)    |
-| O. J. JOSE IGNACIO | <!--enlace-->                                                           |
+| O. J. JOSE IGNACIO | https://github.com/nachoorjmnz/practicasISE/tree/2032b7cc421f9ccc801a8191f10c8327ad8419db/P2-L2                                                          |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P2-L2.md](https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P2-L2.md)                                                           |
 | P. G. INÉS | <!--enlace-->                                                           |
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
