--- a/B3/P1-L1.md
+++ b/B3/P1-L1.md
@@ -16,7 +16,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L1.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P1-L1.md)|
 | N. M. ALEJANDRO | [https://github.com/Alexanm04/practicas-ISE/blob/19746bf43e07ea16c2ac7e17b1c3e880d84a95c6/P1-L1-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/19746bf43e07ea16c2ac7e17b1c3e880d84a95c6/P1-L1-resultados.md)                                                           |
 | O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/blob/main/P1-L1.md](https://github.com/xescoliver/practicas-ISE/blob/main/P1-L1.md) |
-| O. J. JOSE IGNACIO | https://github.com/nachoorjmnz/practicasISE/tree/540648713339b4fd15c22750d8cbbfa53dbd8c87/P1-L2                                                          |
+| O. J. JOSE IGNACIO | [https://github.com/nachoorjmnz/practicasISE/tree/540648713339b4fd15c22750d8cbbfa53dbd8c87/P1-L2 ](https://github.com/nachoorjmnz/practicasISE/tree/2032b7cc421f9ccc801a8191f10c8327ad8419db/P1-L1)                                                         |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L1.md] (https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P1-L1.md)                                                         |
 | P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P1-L1-resultados.md)  |                                                   
 | Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P1-L1-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P1-L1-resultados.md) |
