--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -17,7 +17,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
 | H. M. ANDRES | <!--enlace-->                                                           |
-| J. U. JUAN LUIS | <!--enlace-->                                                           |
+| J. U. JUAN LUIS | [https://github.com/jiur8/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/jiur8/practicas-ISE/blob/main/P2-L3-resultados.md)                                                          |
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
