--- a/B3/P2-L3.md
+++ b/B3/P2-L3.md
@@ -25,4 +25,4 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | V. B. JOSE ANDRES | <!--enlace-->                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
-| V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/a10836fe-5240-4f5e-91c1-dcad2cbd7f20)
+| V. S. CRISTINA |[https://github.com/26203/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P2-L3-resultados.md)|![image](https://github.com/user-attachments/assets/a10836fe-5240-4f5e-91c1-dcad2cbd7f20)
