--- a/B3/P2-L2.md
+++ b/B3/P2-L2.md
@@ -25,4 +25,4 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P2-L2-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/gabrielvico02/practicas-ISE/blob/main/P2-L2-resultados.md)                                                           |
-| V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/eea96a11-6416-4e6b-8bbc-72d75d6f3b48)
+| V. S. CRISTINA |[https://github.com/26203/practicas-ISE/blob/main/P2-L2-resultados.md](https://github.com/26203/practicas-ISE/blob/main/P2-L2-resultados.md)|![image](https://github.com/user-attachments/assets/eea96a11-6416-4e6b-8bbc-72d75d6f3b48)
