--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -29,4 +29,4 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L3-resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
-| V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/49422a49-f0f7-4189-8499-114aeaac4898)
+| V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L3.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L3.md) |![image](https://github.com/user-attachments/assets/49422a49-f0f7-4189-8499-114aeaac4898)
