--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L3-resultados.md |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P2-L3-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P2-L3-resultados.md)
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | [https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L3.md](https://github.com/hugovelez16/practicas-ISE/blob/main/P2-L3.md) |![image](https://github.com/user-attachments/assets/49422a49-f0f7-4189-8499-114aeaac4898)
