--- a/B3/P2-L3.md
+++ b/B3/P2-L3.md
@@ -10,7 +10,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | F. P. MARINO | [https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L3-resultados.md)    |
 | F. B. MIGUEL | <!--enlace-->                                                           |
 | I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L3-resultados.md)     |
-| J. S. DAVID | <!--enlace-->                                                           |
+| J. S. DAVID | [https://github.com/davidjs11/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/davidjs11/practicas-ISE/blob/main/P2-L3-resultados.md)
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS | [https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L3.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P2-L3.md)   |
