Agrego enlace a mi bitácora para la lección 3 de la práctica 2

--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -23,7 +23,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
 | M. R. ALEJANDRO | [https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L3-resultados.md)                                                           |
 | P. P. SEBASTIAN | <!--enlace-->                                                           |
-| R. G. PABLO | <!--enlace-->                                                           |
+| R. G. PABLO | https://github.com/pablorg0/practicas-ISE/blob/main/P2-L3-resultados.md  |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P2_L3-resultados.md |
