--- a/D1/P2-L3.md
+++ b/D1/P2-L3.md
@@ -18,7 +18,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | H. A. ANTONIO | [https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L3-Resultados.md](https://github.com/AntonioHaro1/practicas-ISE/blob/main/P2L3-Resultados.md)                                                          |
 | H. M. ANDRES | <!--enlace-->                                                           |
 | J. U. JUAN LUIS | [https://github.com/jiur8/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/jiur8/practicas-ISE/blob/main/P2-L3-resultados.md)                                                          |
-| L. J. MAURICIO | <!--enlace-->                                                           |
+| L. J. MAURICIO |[https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/mauricioluquejimenez/practicas-ISE/blob/main/P2-L3-resultados.md)|
 | M. M. MANUEL | <!--enlace-->                                                           |
 | M. M. ANA ISABEL | <!--enlace-->                                                           |
 | M. R. ALEJANDRO | [https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/AlexMr08/practicas-ISE/blob/main/P2-L3-resultados.md)                                                           |
