--- a/B3/P2-L3.md
+++ b/B3/P2-L3.md
@@ -8,7 +8,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | C. M. JORGE | <!--enlace-->                                                           |
 | C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P2-L3-resultados.md) |
 | F. P. MARINO | [https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/marinoferperez/practicas-ISE/blob/main/P2-L3-resultados.md)    |
-| F. B. MIGUEL | <!--enlace-->                                                           |
+| F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P2-L3-resultados.md) |
 | I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L3-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P2-L3-resultados.md)     |
 | J. S. DAVID | <!--enlace-->                                                           |
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
